Fixed Unlock Rights

--- a/src/app/software/component/activity-collection-detail/activity-collection-detail.component.html
+++ b/src/app/software/component/activity-collection-detail/activity-collection-detail.component.html
@@ -41,7 +41,7 @@
             Lock
         </button>
         <button mat-flat-button color="primary" [disabled]="isCollectionUnlockButtonDisabled" style="margin-right: 5px;"
-            (click)="buttonUnlockCollection()" *ngIf="mstUserRights.CanUnlock == true">
+            (click)="buttonUnlockCollection()" *ngIf="mstUserRights.CanUnLock == true">
             Unlock
         </button>
         <button mat-flat-button color="warn" routerLink="/software/activity-collection-list">
