--- a/src/app/software/component/activity-collection-payment-detail/activity-collection-payment-detail.component.html
+++ b/src/app/software/component/activity-collection-payment-detail/activity-collection-payment-detail.component.html
@@ -24,6 +24,14 @@
                 </div>
                 <div fxFlex="50" style="padding: 5px;">
                     <mat-form-field appearance="fill" style="width: 100%;">
+                        <mat-label>Unit Code</mat-label>
+                        <input matInput [(ngModel)]="unitCode" [ngModelOptions]="{standalone: true}" disabled>
+                    </mat-form-field>
+                </div>
+            </div>
+            <div fxLayout="row" fxLayout.xs="column">
+                <div fxFlex="100" style="padding: 5px;">
+                    <mat-form-field appearance="fill" style="width: 100%;">
                         <mat-label>Equity Schedule</mat-label>
                         <mat-select [(ngModel)]="trnCollectionPaymentModel.SoldUnitEquityScheduleId">
                             <mat-option *ngFor="let trnSoldUnitEquityScheduleObject of trnSoldUnitEquityScheduleModel"
