--- a/src/app/software/component/activity-sold-unit-detail/activity-sold-unit-detail.component.html
+++ b/src/app/software/component/activity-sold-unit-detail/activity-sold-unit-detail.component.html
@@ -19,7 +19,7 @@
             Lock
         </button>
         <button mat-flat-button color="primary" [disabled]="isSoldUnitUnlockButtonDisabled" style="margin-right: 5px;"
-            (click)="buttonUnlockSoldUnit()" *ngIf="mstUserRights.CanUnlock == true">
+            (click)="buttonUnlockSoldUnit()" *ngIf="mstUserRights.CanUnLock == true">
             Unlock
         </button>
         <button mat-flat-button color="primary" [disabled]="isSoldUnitPrintButtonDisabled" style="margin-right: 5px;"
