--- a/src/app/software/component/setup-broker-detail/setup-broker-detail.component.html
+++ b/src/app/software/component/setup-broker-detail/setup-broker-detail.component.html
@@ -41,7 +41,7 @@
             Lock
         </button>
         <button mat-flat-button color="primary" [disabled]="isBrokerUnlockButtonDisabled" style="margin-right: 5px;"
-            (click)="buttonUnlockBroker()" *ngIf="mstUserRights.CanUnlock == true">
+            (click)="buttonUnlockBroker()" *ngIf="mstUserRights.CanUnLock == true">
             Unlock
         </button>
         <button mat-flat-button color="primary" [disabled]="isBrokerPrintButtonDisabled" style="margin-right: 5px;"
