--- a/src/app/software/component/setup-checklist-detail/setup-checklist-detail.component.html
+++ b/src/app/software/component/setup-checklist-detail/setup-checklist-detail.component.html
@@ -41,7 +41,7 @@
             Lock
         </button>
         <button mat-flat-button color="primary" [disabled]="isChecklistUnlockButtonDisabled" style="margin-right: 5px;"
-            (click)="buttonUnlockChecklist()" *ngIf="mstUserRights.CanUnlock == true">
+            (click)="buttonUnlockChecklist()" *ngIf="mstUserRights.CanUnLock == true">
             Unlock
         </button>
         <button mat-flat-button color="primary" [disabled]="isChecklistPrintButtonDisabled" style="margin-right: 5px;"
