--- a/src/app/software/component/setup-customer-detail/setup-customer-detail.component.html
+++ b/src/app/software/component/setup-customer-detail/setup-customer-detail.component.html
@@ -19,7 +19,7 @@
             Lock
         </button>
         <button mat-flat-button color="primary" [disabled]="isCustomerUnlockButtonDisabled" style="margin-right: 5px;"
-            (click)="buttonUnlockCustomer()" *ngIf="mstUserRights.CanUnlock == true">
+            (click)="buttonUnlockCustomer()" *ngIf="mstUserRights.CanUnLock == true">
             Unlock
         </button>
         <button mat-flat-button color="primary" [disabled]="isCustomerPrintButtonDisabled" style="margin-right: 5px;"
