--- a/src/app/software/component/setup-unit-detail/setup-unit-detail.component.html
+++ b/src/app/software/component/setup-unit-detail/setup-unit-detail.component.html
@@ -41,7 +41,7 @@
             Lock
         </button>
         <button mat-flat-button color="primary" [disabled]="isUnitUnlockButtonDisabled" style="margin-right: 5px;"
-            (click)="buttonUnlockUnit()" *ngIf="mstUserRights.CanUnlock == true">
+            (click)="buttonUnlockUnit()" *ngIf="mstUserRights.CanUnLock == true">
             Unlock
         </button>
         <button mat-flat-button color="warn" routerLink="/software/setup-unit-list">
