--- a/src/app/software/component/activity-collection-payment-detail/activity-collection-payment-detail.component.html
+++ b/src/app/software/component/activity-collection-payment-detail/activity-collection-payment-detail.component.html
@@ -37,6 +37,7 @@
                             <mat-option *ngFor="let trnSoldUnitEquityScheduleObject of trnSoldUnitEquityScheduleModel"
                                 [value]="trnSoldUnitEquityScheduleObject.Id">
                                 {{trnSoldUnitEquityScheduleObject.PaymentDate}} -
+                                {{trnSoldUnitEquityScheduleObject.Remarks}}: 
                                 {{decimalPipe.transform(trnSoldUnitEquityScheduleObject.Amortization, "1.2-2")}}
                             </mat-option>
                         </mat-select>
